@@ -25,12 +25,12 @@ List of some MISSING features that are planned to be included. For specific func
 * Textures
 	* LoadImageFromMemory
 * Text
-	* LoadFontFromMemory
 	* GlyphInfo
+	* LoadFontFromMemory
 * Audio
+	* AudioStream management functions
 	* LoadWaveFromMemory
 	* LoadMusicStreamFromMemory
-	* AudioStream management functions
 
 ## Usage
 
